add detailed explaination

--- a/notebooks/linked_list.ipynb
+++ b/notebooks/linked_list.ipynb
@@ -1,6 +1,33 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Linked List and Node\n",
+    "\n",
+    "Linked list and Node is the foundation of data structure since all other structures(such as binary search tree... etc) are based on node and linked list. for example, graph is a non-linear linked list that has next N-node.\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "\n",
+    "## Node\n",
+    "\n",
+    "Node is basically has three method and four attribute. __call__, get_next, set_next & item, next, is_head, is_tail. detailed explanation is in the below\n",
+    "\n",
+    "1. __call__: return the value of the node.\n",
+    "2. get_next: return the pointer(reference) address of the next node. thanks to this method, you can use linked list as a list.\n",
+    "3. set_next: set the pointer(reference) address of the next node. this links between two nodes and prevents garbage collector to delete next node by adding reference counter. In other words, you can delete next node by node.set_next(value=None)\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
@@ -26,6 +53,24 @@
     "    def set_next(self, value) -> ClassVar:\n",
     "        self.next = value\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Nodes are vary for the data structure, In the binary search tree, for examples, get_next and set_next will be replaced by get_left, get_right and set_left and set_right(of course, you can use hash-table node for graph)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Linked List"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
@@ -62,10 +107,7 @@
     "        return current_node"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -82,10 +124,7 @@
     "linked_list.append('f', 4)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -105,10 +144,7 @@
     "linked_list[2].item"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -130,10 +166,7 @@
     "linked_list[2].item"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -146,10 +179,7 @@
     "linked_list[5].item"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -169,10 +199,7 @@
     "linked_list[2].item"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -181,10 +208,7 @@
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   }
  ],
