add dynamic programming

--- a/notebooks/linked_list.ipynb
+++ b/notebooks/linked_list.ipynb
@@ -2,17 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "# Linked List and Node\n",
     "\n",
     "Linked list and Node is the foundation of data structure since all other structures(such as binary search tree... etc) are based on node and linked list. for example, graph is a non-linear linked list that has next N-node.\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "\n",
     "## Node\n",
@@ -22,10 +25,7 @@
     "1. __call__: return the value of the node.\n",
     "2. get_next: return the pointer(reference) address of the next node. thanks to this method, you can use linked list as a list.\n",
     "3. set_next: set the pointer(reference) address of the next node. this links between two nodes and prevents garbage collector to delete next node by adding reference counter. In other words, you can delete next node by node.set_next(value=None)\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
@@ -56,32 +56,74 @@
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "Nodes are vary for the data structure, In the binary search tree, for examples, get_next and set_next will be replaced by get_left, get_right and set_left and set_right(of course, you can use hash-table node for graph)"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "Nodes are vary for the data structure, In the binary search tree, for examples, get_next and set_next will be replaced by get_left, get_right and set_left and set_right(of course, you can use hash-table node for graph)\n",
+    "\n",
+    "the below code is the example of the Node in double linked list. unlike node in linked list, node in double linked list contains one more attribute--self.prev."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from typing import *\n",
+    "\n",
+    "class Node(object):\n",
+    "    def __init__(self, item: Any = None, next: ClassVar = None, prev: ClassVar = None, is_head: bool = False, is_tail: bool = False) -> None:\n",
+    "        self.item = item\n",
+    "        self.next = next\n",
+    "        self.prev = prev\n",
+    "        self.is_head = is_head\n",
+    "        self.is_tail = is_tail\n",
+    "\n",
+    "    def __call__(self) -> Any:\n",
+    "        return self.item\n",
+    "\n",
+    "    def get_next(self) -> ClassVar:\n",
+    "        return self.next\n",
+    "\n",
+    "    def get_prev(self) -> ClassVar:\n",
+    "        return self.prev\n",
+    "\n",
+    "    def set_next(self, value: ClassVar) -> None:\n",
+    "        self.next = value\n",
+    "\n",
+    "    def set_prev(self, value: ClassVar) -> None:\n",
+    "        self.prev = value"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "## Linked List"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "## Linked List"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 62,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "class LinkedList(object):\n",
-    "    def __init__(self):\n",
+    "    def __init__(self, items: Optional[List[Any]] = None):\n",
     "        self.tail = Node(is_tail=True)\n",
     "        self.head = Node(is_head=True, next=self.tail)\n",
     "        self.length = 2\n",
+    "        if items:\n",
+    "            for idx, item in enumerate(items):\n",
+    "                self.append(item, idx)\n",
     "\n",
     "    def remove(self, idx: int):\n",
     "        prev_node = self[idx-1]\n",
@@ -105,14 +147,14 @@
     "        for idx in range(idx + 1):\n",
     "            current_node = current_node.next\n",
     "        return current_node"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 63,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "linked_list = LinkedList()\n",
@@ -122,18 +164,20 @@
     "linked_list.append('d', 2)\n",
     "linked_list.append('e', 3)\n",
     "linked_list.append('f', 4)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 64,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "'d'"
+      "text/plain": [
+       "'d'"
+      ]
      },
      "execution_count": 64,
      "metadata": {},
@@ -142,18 +186,20 @@
    ],
    "source": [
     "linked_list[2].item"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 65,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "'c'"
+      "text/plain": [
+       "'c'"
+      ]
      },
      "execution_count": 65,
      "metadata": {},
@@ -164,31 +210,33 @@
     "linked_list.append('c', 2)\n",
     "\n",
     "linked_list[2].item"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 66,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "linked_list.remove(5)\n",
     "\n",
     "linked_list[5].item"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 68,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "'c'"
+      "text/plain": [
+       "'c'"
+      ]
      },
      "execution_count": 68,
      "metadata": {},
@@ -197,24 +245,21 @@
    ],
    "source": [
     "linked_list[2].item"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.12 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -228,7 +273,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
+   }
   }
  },
  "nbformat": 4,
