add priority queue

--- a/notebooks/tree.ipynb
+++ b/notebooks/tree.ipynb
@@ -24,7 +24,10 @@
     "\n",
     "**Degree**: Degree is a number of child that a specific node is able to have. In Binary Search Tree, Degree of all node is 2. \n",
     "\n",
-    "**Size**: Size of tree is the number of nodes in the tree.\n",
+    "**Size**: Size of tree is the number of nodes in the tree. it's maximum size can be calculated by below formula.\n",
+    "\n",
+    "given the size of tree is $n$ and height is $h$, \n",
+    "$$n\\leq 2^{h+1}-1$$\n",
     "\n",
     "**Full / Complete Tree**: Full tree is a tree that meets the following condition in the below.\n",
     "1. there are no leaf nodes that is not in the maximum depth.\n",
