--- a/notebooks/tree.ipynb
+++ b/notebooks/tree.ipynb
@@ -63,7 +63,7 @@
     "from typing import *\n",
     "\n",
     "\n",
-    "class Node(object):\n",
+    "class BinaryTreeNode(object):\n",
     "    def __init__(self, value: Union[int, float], parent: object) -> None:\n",
     "        self.parent = parent\n",
     "        self.value = value\n",
@@ -77,14 +77,6 @@
     "            self.left = node\n",
     "        else:\n",
     "            pass\n",
-    "\n",
-    "\n",
-    "class BinaryTreeNode(object):\n",
-    "    def __init__(self, item: Any = None, next: ClassVar = None, is_head: bool = False, is_tail: bool = False) -> None:\n",
-    "        self.item = item\n",
-    "        self.next = next\n",
-    "        self.is_head = is_head\n",
-    "        self.is_tail = is_tail\n",
     "\n",
     "    def __call__(self) -> Any:\n",
     "        return self.item\n",
@@ -104,47 +96,7 @@
    "source": [
     "from typing import *\n",
     "import logging\n",
-    "\n",
-    "\n",
-    "class LinkedList(object):\n",
-    "    def __init__(self):\n",
-    "        self.tail = Node(is_tail=True)\n",
-    "        self.head = Node(is_head=True, next=self.tail)\n",
-    "        self.length = 0\n",
-    "\n",
-    "    def remove(self, idx: int):\n",
-    "        prev_node = self[idx-1]\n",
-    "        next_node = self[idx+1]\n",
-    "        prev_node.next = next_node\n",
-    "        self.length -= 1\n",
-    "\n",
-    "    def append(self, item: Any, idx: int):\n",
-    "        node_new = Node(item)\n",
-    "        prev_node = self[idx-1]\n",
-    "        next_node = prev_node.next\n",
-    "        prev_node.next = node_new\n",
-    "        node_new.set_next(next_node)\n",
-    "        self.length += 1\n",
-    "\n",
-    "    def __len__(self):\n",
-    "        return self.length\n",
-    "\n",
-    "    def __getitem__(self, idx):\n",
-    "        current_node = self.head\n",
-    "        for idx in range(idx + 1):\n",
-    "            current_node = current_node.next\n",
-    "        return current_node\n",
-    "\n",
-    "\n",
-    "class Queue(LinkedList):\n",
-    "    def __init__(self):\n",
-    "        super().__init__()\n",
-    "\n",
-    "    def enqueue(self, item):\n",
-    "        self.append(item, 0)\n",
-    "\n",
-    "    def dequeue(self):\n",
-    "        self.remove(self.__len__() - 1)\n",
+    "from src.queue import Queue\n",
     "\n",
     "\n",
     "class BinarySearchTree(object):\n",
@@ -193,8 +145,8 @@
     "        else:\n",
     "            if node.left and node.right:\n",
     "                next_node = node.left\n",
-    "                new_root_val = self.max(next_node).value\n",
-    "                self.root = BinaryTreeNode(new_root_val) \n",
+    "                new_node_val = self.max(next_node).value\n",
+    "                node = BinaryTreeNode(new_node_val) \n",
     "            else:\n",
     "                child_node = node.left if node.left is not None else node.right\n",
     "                if node.left:\n",
@@ -267,7 +219,12 @@
     "            if node.right is not None:\n",
     "                queue.dequeue(node.right)\n",
     "        return ret\n",
-    "\n"
+    "\n",
+    "    def __itr__(self):\n",
+    "        return self.depth_first_traverse(order='sorted')\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return str(self.__itr__())\n"
    ]
   }
  ],
