--- a/notebooks/priority_queue.ipynb
+++ b/notebooks/priority_queue.ipynb
@@ -74,7 +74,7 @@
     "            current_node = current_node.next\n",
     "        return current_node\n",
     "\n",
-    "    def __itr__(self):\n",
+    "    def __iter__(self):\n",
     "        current_node = self.head.next\n",
     "        while current_node.is_tail is False:\n",
     "            yield current_node\n",
@@ -162,7 +162,7 @@
     "    def __len__(self):\n",
     "        return len(self.items)\n",
     "\n",
-    "    def __itr__(self):\n",
+    "    def __iter__(self):\n",
     "        for i in range(len(self) - 1):\n",
     "            yield self[i]\n",
     "\n",
