[FIX] iterable linked list

--- a/notebooks/binary_heap.ipynb
+++ b/notebooks/binary_heap.ipynb
@@ -32,16 +32,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Node(object):\n",
-    "    def __init__(self, value: int, is_root: bool = False):\n",
-    "        self.value = value\n",
-    "        self.is_root = is_root\n",
-    "        self.left = None\n",
-    "        self.right = None\n",
+    "from typing import *\n",
+    "from src.tree import BinaryTreeNode, BinarySearchTree\n",
     "\n",
     "\n",
-    "class BinaryHeapTree(object):\n",
-    "    def __init__(self, )"
+    "class BinaryHeapTree(BinarySearchTree):\n",
+    "    def __init__(self, elements: Optional[List[int]] = None):\n",
+    "        super().__init__(elements)"
    ]
   }
  ],
