--- a/notebooks/order_of_nlogn_sorting.ipynb
+++ b/notebooks/order_of_nlogn_sorting.ipynb
@@ -28,91 +28,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
     "def perform_merge_sort(arr):\n",
     "    if len(arr) == 1:\n",
     "        return arr\n",
-    "    \n",
-    "    sub_element_1 = list()\n",
-    "    sub_element_2 = list()\n",
+    "    else:\n",
+    "        mid = len(arr) // 2\n",
+    "        left = arr[:mid]\n",
+    "        right = arr[mid:]\n",
+    "        return merge(perform_merge_sort(left), perform_merge_sort(right))\n",
     "\n",
-    "    #   1. Divide the array into two sub-arrays\n",
-    "\n",
-    "    for itr, item in enumerate(arr):\n",
-    "        if itr < len(arr) // 2:\n",
-    "            sub_element_1.append(item)\n",
+    "def merge(left, right):\n",
+    "    result = []\n",
+    "    while len(left) > 0 and len(right) > 0:\n",
+    "        if left[0] <= right[0]:\n",
+    "            result.append(left.pop(0))\n",
     "        else:\n",
-    "            sub_element_2.append(item)\n",
-    "\n",
-    "    #   1.1. Recursively divide the sub-arrays into two sub-arrays.\n",
-    "    #        This is the recursive step.\n",
-    "    \n",
-    "    sub_element_1 = perform_merge_sort(sub_element_1)\n",
-    "    sub_element_2 = perform_merge_sort(sub_element_2)\n",
-    "\n",
-    "    #   2. Sort the sub-arrays\n",
-    "\n",
-    "    idx_to_count_1 = 0\n",
-    "    idx_to_count_2 = 0\n",
-    "\n",
-    "    new_arr = list() \n",
-    "\n",
-    "    for idx in range(len(arr)):\n",
-    "        if idx_to_count_1 == len(sub_element_1):\n",
-    "            new_arr.append(sub_element_2[idx_to_count_2])\n",
-    "            idx_to_count_2 += 1\n",
-    "        elif idx_to_count_2 == len(sub_element_2):\n",
-    "            new_arr.append(sub_element_1[idx_to_count_1])\n",
-    "            idx_to_count_1 += 1\n",
-    "        #\n",
-    "        #   If the element in the first sub-array is greater than the element in the second sub-array,\n",
-    "        #   then the element in the second sub-array is the next element in the sorted array.\n",
-    "        #\n",
-    "        elif sub_element_1[idx_to_count_1] > sub_element_2[idx_to_count_2]:\n",
-    "            new_arr.append(sub_element_2[idx_to_count_2])\n",
-    "            idx_to_count_2 += 1\n",
-    "        else:\n",
-    "            new_arr.append(sub_element_1[idx_to_count_1])\n",
-    "            idx_to_count_1 += 1\n",
-    "    return arr"
+    "            result.append(right.pop(0))\n",
+    "    result += left\n",
+    "    result += right\n",
+    "    return result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1] [34]\n",
-      "[53] [123]\n",
-      "[2] [53, 123]\n",
-      "[1, 34] [2, 53, 123]\n",
-      "[53] [12]\n",
-      "[67] [44]\n",
-      "[11] [67, 44]\n",
-      "[53, 12] [11, 67, 44]\n",
-      "[1, 34, 2, 53, 123] [53, 12, 11, 67, 44]\n",
-      "[1, 34, 2, 53, 123, 53, 12, 11, 67, 44]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[1, 2, 11, 12, 34, 44, 53, 53, 67, 123]"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "arr = [1, 34, 2, 53, 123, 53, 12, 11, 67, 44]\n",
-    "print(perform_merge_sort(arr))"
+    "perform_merge_sort(arr)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Heap Sort\n",
+    "\n",
+    "It uses priority queue. "
+   ]
   }
  ],
  "metadata": {
