--- a/notebooks/counting_sort.ipynb
+++ b/notebooks/counting_sort.ipynb
@@ -1,6 +1,28 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Order of N Sorting.\n",
+    "\n",
+    "## Assumption\n",
+    "\n",
+    "Based on counting and numeric properties.\n",
+    "\n",
+    "## Pros\n",
+    "- best not comparison-based\n",
+    "\n",
+    "## Cons\n",
+    "- because of order of N sorting is not comparision-based, needs assumtions.\n",
+    "\n",
+    "## Variants\n",
+    "- Radix sort\n",
+    "- Count sort"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
