--- a/notebooks/counting_sort.ipynb
+++ b/notebooks/counting_sort.ipynb
@@ -24,10 +24,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def counting_sort(array: list):\n",
+    "    maximum = 0\n",
+    "    for i in range(len(array)):\n",
+    "        maximum = i\n",
+    "    count_list = list(0 for _ in range(0, maximum + 2))\n",
+    "    for i in array:\n",
+    "        if i != 0:\n",
+    "            count_list[i] += 1\n",
+    "    sorted_array = []\n",
+    "    for idx, num in enumerate(count_list):\n",
+    "        if count_list[idx] != 0:\n",
+    "            will_be_added = [idx] * num\n",
+    "            sorted_array += will_be_added\n",
+    "    return sorted_array "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 5, 8, 8, 8, 9, 10, 11, 11, 11, 12, 12, 12, 12, 14, 14, 15, 17, 17, 19, 20, 21, 21, 24, 27, 29, 31, 31, 32, 32, 33, 40, 41, 42, 42, 42, 44, 44, 46, 47, 47, 47, 49, 51, 51, 53, 53, 53, 54, 54, 55, 55, 55, 55, 56, 56, 56, 56, 56, 57, 57, 60, 61, 61, 63, 66, 67, 67, 67, 68, 70, 71, 71, 71, 71, 72, 72, 74, 75, 76, 76, 80, 80, 80, 84, 85, 87, 88, 88, 89, 90, 91, 92, 92, 92, 96, 98, 99]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "x = [random.randint(0, 100) for i in range(100)]\n",
+    "print(counting_sort(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "99"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(counting_sort(x))"
+   ]
   }
  ],
  "metadata": {
@@ -37,8 +92,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.8.10 (default, Nov 14 2022, 12:59:47) \n[GCC 9.4.0]"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.6"
   },
   "orig_nbformat": 4,
   "vscode": {
